--- a/styles/style.css
+++ b/styles/style.css
@@ -52,6 +52,7 @@ header {
     width: 78px;
     height: 40px;
 
+    color: black;
     background-color: white;
     transition: background-color 0.1s ease-in;
 }
@@ -239,7 +240,7 @@ footer {
 
     height: 40px;
 }
-.dropdown {
+#dropdown {
     background-color: #3B3B3B;
     color: white;
     border: none;
@@ -442,4 +443,51 @@ footer {
 }
 .top-button:active {
     background-color: #4a8d4d;
+}
+
+@media (max-width: 1250px) {
+    .containerfooterfourth a {
+        position: absolute; top: 85%; right: 50px;
+    }
+    .headerlogo {
+        margin: 0px 0px 0px 10px;
+    }
+}
+
+@media (max-width: 1050px) { /* Для экранов меньшего размера */
+    .restlist,
+    .restlist2,
+    .restlist3 {
+        flex-direction: column; /* Размещение элементов в столбик */
+        align-items: center; /* Центрирование элементов */
+
+        margin-top: 0px;
+    }
+
+    .restaurantstext {
+        text-decoration: underline;
+        margin: 0px 0px 20px 350px;
+    }
+
+    .searchinput {
+        text-align: center;
+    }
+}
+@media (max-width: 750px) { /* Для экранов меньшего размера */
+
+    .restaurantstext {
+        margin: 0px 0px 20px 255px;
+    }
+}
+@media (max-width: 650px) { /* Для экранов меньшего размера */
+
+    .restaurantstext {
+        margin: 0px 0px 20px 200px;
+    }
+}
+@media (max-width: 550px) { /* Для экранов меньшего размера */
+
+    .restaurantstext {
+        margin: 0px 0px 20px 120px;
+    }
 }
