--- a/styles/secondpagestyle.css
+++ b/styles/secondpagestyle.css
@@ -384,6 +384,17 @@ footer {
         margin-left: 85px;
     }
 
+    #third-plate img {
+        margin-left: 30px;
+    }
+
+    #fifth-plate img {
+        margin-left: 50px;
+    }
+    #sixth-plate img {
+        margin-left: 50px;
+    }
+
     #first-plate h1 {
         margin-top: 0px;
     }
